# tsgolint

./: .gitattributes  .gitignore  .golangci.yml  .typos.toml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  README.md  THIRD-PARTY-LICENSE  diagnostics.snapshot  dprint.json  e2e_diagnostics.snap  go.mod  go.sum  go.work  go.work.sum  justfile  package.json  pnpm-lock.yaml  test-snapshot.sh  test.sh  test_computed_property.js  test_reason.ts
.github/: CODEOWNERS  renovate.json  renovate.json5
benchmarks/: Containerfile  README.md  eslint.config.mjs  setup.sh
docs/: benchmarks.md
e2e/: README.md  package-lock.json  package.json  path-aliases.test.ts  pnpm-lock.yaml  snapshot.test.ts  tsconfig.json  vitest.config.ts
internal/: linter_bench_test.go
oxc-resolver-ffi/: Cargo.toml  build.rs  cbindgen.toml  oxc_resolver.h
patches/: 0001-Adapt-project-service-for-single-run-mode.patch  0001-Parallel-readDirectory-visitor.patch  0002-Adapt-project-service-for-single-run-mode.patch  0002-Create-one-checker-per-CPU.patch  0002-patch-expose-more-functions-via-the-shim-with-type-f.patch  0003-Temporarily-disable-project-cleanup-and-debug-output.patch  0003-fix-early-return-from-invalid-tsconfig-for-better-er.patch  0003-patch-expose-more-functions-via-the-shim-with-type-f.patch  0003-perf-tspath-use-unsafe.String-to-avoid-allocations-w.patch  0004-Adapt-project-service-for-single-run-mode.patch  0004-feat-improve-panic-message-for-extracting-TS-extensi.patch  0004-fix-collections-avoid-internal-json-import-in-ordere.patch  0005-use-oxc-resolver.patch  0007-testing.patch  (+28 more)
(+489 files in other folders)
